@@ -62,6 +62,16 @@ div.main {
 	font-size:		10pt;
 	line-height:		130%;
 }
+@media screen and (min-width: 940px) {
+	div.main {
+		margin-left:	18%;	/* for IE8 */
+		margin-left:	calc(17% + 4px);
+	}
+	#sidebar {
+		width:		17%;
+	}
+}
+
 /* フッタの配置 */
 #footer
 {
