@@ -16,6 +16,7 @@
 -【テーマ】satsuki2-multiside テーマを廃止してウィンドウ横幅によりマルチサイドバーにする satsuki2-resp に変更しました。
 -【fix】その他の設定に、謎のデザインモジュール再インストールボタンがあった。
 -【fix】行連結記法が使えない。((β3直後に完全にエンバグしてました。必要処理をなぜか１行削除するというコピペ操作ミスだと思われます、恥ずかしい（汗）))
+-【fix】Markdown記法でインラインのソースコード記述で、{<, >, &}がうまくエスケープされない。（[http://adiary.blog.abk.nu/0366#com:Thanks to 手石]）
 -他
 
 *Ver3.0β6 : 2015/05/17
